gcc/testsuite/g++.dg/init/union1.C
// PR c++/14401

union U {
  int& i; // { dg-error "" }
};
